--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
   "dependencies": {
     "@primeuix/themes": "^1.2.4",
     "@tailwindcss/vite": "^4.1.13",
+    "vue-draggable-next": "^2.3.0",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "pinia": "^3.0.3",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.9",
     "tailwindcss": "^4.1.13",
     "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@primevue/auto-import-resolver": "^4.3.9",
